...
                if (bankAccountValidationSupported) {
                    BisqGap.V1()
                    val holderNameLabel = "paymentAccounts.holderName".i18n()
                    BankAccountTextField(
                        entry = uiState.holderNameEntry,
                        label = holderNameLabel,
                        placeholder = "paymentAccounts.createAccount.prompt".i18n(holderNameLabel.lowercase()),
                        onValueChange = { onAction(BankAccountFormUiAction.OnHolderNameChange(it)) },
                    )

                    if (details.holderIdRequired) {
                        BankAccountTextField(
                            entry = uiState.holderIdEntry,
...
) {
    BisqGap.V1()
    BankAccountDropdown(
        options = BankAccountType.entries.map { type -> type.toDisplayString() },
        selectedIndex = BankAccountType.entries.indexOf(selectedBankAccountType),
        label = "paymentAccounts.bank.bankAccountType".i18n(),
        prompt = "paymentAccounts.createAccount.accountData.bank.bankAccountType.prompt".i18n(),
        errorMessage = errorMessage,
        onOptionSelect = { index ->
            BankAccountType.entries.getOrNull(index)?.let(onOptionSelect)
        },
    )
}
...
